replace and summary text fixes for ID

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,2 +1,6 @@
 myarticle-url: /en/my-article/
 myarticle-text: This is my article
+title:
+  replace: ReplaceMe
+summary:
+  text: Summary in English
