--- a/_i18n/id.yml
+++ b/_i18n/id.yml
@@ -1,2 +1,6 @@
 myarticle-url: /id/artikel-saya/
 myarticle-text: Ini artikel saya
+title:
+  replace: ReplaceMe Indonesian
+summary:
+  text: Summary in Indonesian
